# PatriarchSign

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/: peauth_v4.2.1.aar
app/src/androidTest/java/com/jwx/patriarchsign/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/android_serialport_api/: DataUtils.java  FingerprintAPI.java  LooperBuffer.java  SerialPort.java  SerialPortFinder.java  SerialPortManager.java
app/src/main/java/com/jwx/patriarchsign/: MainActivity.java
app/src/main/java/com/jwx/patriarchsign/constant/: MessageType.java
app/src/main/java/com/jwx/patriarchsign/imageView/: ImageLoader.java  (+4 more)
app/src/main/res/anim/: anim_fade_in_exit.xml  anim_fade_in_open.xml  anim_fade_out_exit.xml  anim_fade_out_open.xml
app/src/main/res/drawable/: btn_bg_gray_selector.xml  btn_bg_green_selector.xml  btn_bg_pink_selector.xml  btn_bg_selector.xml  empty_photo.xml  full_line.xml  full_line_gray_bg.xml  index_text_bg.xml  input_bg.xml  item_bg_selector.xml  list_view_text_select.xml  menu_item_selector.xml  signpad_bg.xml  white_selector_bg.xml
app/src/main/res/drawable-v21/: item_bg_selector.xml  menu_item_selector.xml
app/src/main/res/layout/: activity_agreement.xml  activity_device_bind.xml  activity_doctor_detail.xml  activity_doctor_detail1.xml  activity_doctor_info.xml  activity_face_collect.xml  activity_finger_print.xml  activity_index.xml  activity_ip_config.xml  activity_main.xml  activity_sign_collect.xml  activity_user_license.xml  dialog_bt_item_layout.xml  dialog_layout.xml  dialog_password_layout.xml  dialog_uploading_layout.xml  dialog_user_license_layout.xml  doctor_info_item_layout.xml  fragment_doctor_info_list.xml  fragment_inoculation_table.xml  image_activity_main.xml  image_details.xml  info_confirmation.xml  list_view_text.xml  pager_empty.xml  pager_error.xml  pager_loading.xml  pick_table_dialog_layout.xml  table_item_layout.xml  view_page.xml  wait_for.xml  zoom_image_layout.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-sw480dp/: dimens.xml
app/src/main/res/values-sw720dp/: dimens.xml
app/src/test/java/com/jwx/patriarchsign/: ExampleUnitTest.java
(+103 files in other folders)
